# JeroRobot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: architecture.md
inc/base/utils/: JLog.h
src/base/utils/: JLog.cpp
